<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_schedule"
            android:checked="false"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/schedule_title" />

        <item
            android:id="@+id/item_maps"
            android:checked="false"
            android:icon="@drawable/ic_near_me_black_24dp"
            android:title="@string/maps_title" />

        <item
            android:id="@+id/item_announcements"
            android:checked="false"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/announcements_title" />

        <item
            android:id="@+id/item_countdown"
            android:checked="false"
            android:icon="@drawable/ic_alarm_black_24dp"
            android:title="@string/countdown_title" />

        <item
            android:id="@+id/item_mentor"
            android:checked="false"
            android:icon="@drawable/ic_touch_app_black_24dp"
            android:title="@string/mentor_title" />

        <item
            android:id="@+id/item_emergency"
            android:checked="false"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/emergency_title" />

        <item
            android:id="@+id/item_credits"
            android:checked="false"
            android:icon="@drawable/ic_child_care_black_24dp"
            android:title="@string/credits_title" />
    </group>
</menu>