<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cwru.edu.hackcwru.ui.ScrollChildSwipeRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/announcements_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:listitem="@layout/announcement_item" />
    </cwru.edu.hackcwru.ui.ScrollChildSwipeRefreshLayout>

    <cwru.edu.hackcwru.ui.OpenSansTextView
        android:id="@+id/no_announcements_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="@dimen/no_events_view_padding"
        android:text="@string/no_announcements_text"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone" />
</FrameLayout>