<resources>
    <string name="app_name">HackCWRU</string>
    <string name="operating_system">android</string>

    <string name="action_overflow">Overflow</string>

    <string name="session_preferences">cwru.edu.hackcwru.PREFERENCES</string>

    <string name="no_events_text">There are no events here :/\nTry clicking the bookmark button on the bottom right.</string>
    <string name="no_announcements_text">There are no announcements here :|</string>

    <string name="mentor_request_success_message">A mentor request has been successfully submitted.</string>
    <string name="mentor_request_failure_message">Problem occurred while sending a mentor request.</string>

    <!-- Navigation Drawer -->
    <string name="schedule_title">Schedule</string>
    <string name="maps_title">Map</string>
    <string name="announcements_title">Announcements</string>
    <string name="countdown_title">Countdown</string>
    <string name="mentor_title">Request a Mentor</string>
    <string name="emergency_title">Emergency Contacts</string>
    <string name="credits_title">Credits</string>

    <!-- Credits -->
    <string name="brian_description">If you want to learn about Android dev, go to his Android Development Workshop @ HackCWRU! Also, you can find him at brianvli.com </string>
    <string name="dylan_description">If you liked the Countdown Page, you should also check out his awesome Android app \"The Jump Rope Tricktionary\".
        \n\nFun fact: Dylan is a pro jump roper (you should ask him to show you his skills!!). </string>
    <string name="anna_description">If you liked the maps or the nicely formatted time, you should check out Anna at https://www.annasedlackova.com.
        \n\nFun fact: Anna builds rockets in her free time (she\'s a serious bad***!!) </string>

</resources>
